Fix parsing of ModMetaFile and fixes for tests